--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -240,7 +240,7 @@ html(lang="en")
                 span.sr-only Next
 
         section(class="Fon")  
-          .container(class="FonF")
+          .container
             h2(class="otz") Отзывы наших партнеров
 
             #carouselExampleCaptions.carousel.slide(data-ride='carousel')
@@ -271,7 +271,7 @@ html(lang="en")
                               h3(class="derwwra") Валерий Мяснянкин
                               p(class="derw-wrapper") Представительство корпорации «VMSN GROUP, INC.» (США) в Республике Беларусь на протяжении нескольких лет сотрудничает с ООО «МК-Правовые технологии» в рамках сопровождения деятельности по юридическим вопросам, в том числе по вопросам ведения кадрового делопроизводства – абонентское обслуживание. Хотелось бы отметить работу специалистов ООО «МК-Правовые технологии» хорошими теплыми словами: надёжные, обязательные, пунктуальные. Вопросы любой сложности им по плечу. Работая с профессионалами МК-Правовые технологии, всегда можно рассчитывать...
                               a(href="#") ЧИТАТЬ ДАЛЕЕ
-                  button(class="Blotbut") Все отзывы             
+                  button(class="Blotbut") ВСЕ ОТЗЫВЫ          
                 .carousel-item
                   div(class="Blot")
                     div(class="bloc bloc1")
@@ -294,7 +294,7 @@ html(lang="en")
                               h3(class="derwwra") Валерий Мяснянкин
                               p(class="derw-wrapper") Представительство корпорации «VMSN GROUP, INC.» (США) в Республике Беларусь на протяжении нескольких лет сотрудничает с ООО «МК-Правовые технологии» в рамках сопровождения деятельности по юридическим вопросам, в том числе по вопросам ведения кадрового делопроизводства – абонентское обслуживание. Хотелось бы отметить работу специалистов ООО «МК-Правовые технологии» хорошими теплыми словами: надёжные, обязательные, пунктуальные. Вопросы любой сложности им по плечу. Работая с профессионалами МК-Правовые технологии, всегда можно рассчитывать...
                               a(href="#") ЧИТАТЬ ДАЛЕЕ
-                  button(class="Blotbut") Все отзывы          
+                  button(class="Blotbut") ВСЕ ОТЗЫВЫ       
                 .carousel-item
                   div(class="Blot")
                     div(class="bloc bloc1")
@@ -317,7 +317,7 @@ html(lang="en")
                               h3(class="derwwra") Валерий Мяснянкин
                               p(class="derw-wrapper") Представительство корпорации «VMSN GROUP, INC.» (США) в Республике Беларусь на протяжении нескольких лет сотрудничает с ООО «МК-Правовые технологии» в рамках сопровождения деятельности по юридическим вопросам, в том числе по вопросам ведения кадрового делопроизводства – абонентское обслуживание. Хотелось бы отметить работу специалистов ООО «МК-Правовые технологии» хорошими теплыми словами: надёжные, обязательные, пунктуальные. Вопросы любой сложности им по плечу. Работая с профессионалами МК-Правовые технологии, всегда можно рассчитывать...
                               a(href="#") ЧИТАТЬ ДАЛЕЕ
-                  button(class="Blotbut") Все отзывы          
+                  button(class="Blotbut") ВСЕ ОТЗЫВЫ       
               a.carousel-control-prev.BRT(href='#carouselExampleCaptions' role='button' data-slide='prev')
                 span.carousel-control-prev-icon(aria-hidden='true')
                 span.sr-only Previous
@@ -327,12 +327,34 @@ html(lang="en")
             .container
               .row(class="dr")
                 .col-7
-                  p Оказываем юридические услуги юридическим лицам и индивидуальным предпринимателям. Специализируемся в области хозяйственного права, работаем на всей территории Республики Беларусь, а также за ее пределами, с бизнесом любого масштаба.
-                button(class="proj") НАШИ ПАРТНЕРЫ
-              div(class="logo")
-                div(class="logo")
-                  div(class="logo")
-                    div(class="logo")
+                  p(class="okaz") Оказываем юридические услуги юридическим лицам и индивидуальным предпринимателям. Специализируемся в области хозяйственного права, работаем на всей территории Республики Беларусь, а также за ее пределами, с бизнесом любого масштаба.
+                button(class="proj") НАШИ ПАРТНЕРЫ   
+              div(class="logot")
+                div(class="logo-logo1")
+                  img(src="images/logo1.png", alt="logotyp")
+                div(class="logo-logo2")
+                  img(src="images/titan_logo 1.png", alt="logotyp")
+                div(class="logo-logo3")
+                  img(src="images/logo2.png", alt="logotyp")
+                div(class="logo-logo4")
+                  img(src="images/logo3.png", alt="logotyp")
+                div(class="logo-logo5")
+                  img(src="images/logo4.png", alt="logotyp")
+
+        section(class="Interes") 
+          .container
+            div(class="GRinter")
+              div(class="GRsimple")
+                div(class="ob")
+                  h4 Просто объясним сложные вещи
+                  p В своей практике, мы дотошно соблюдаем законность, учитываем сложившуюся правовую практику и правила юридической этики. Мы считаем, что в поддержке бизнеса важно учитывать конкретные проблемы клиента и строить сотрудничество по принципу тщательного изучения всех нюансов возникшей ситуации. Всегда честны и объективны.
+
+              div(class="GRprava")
+                div(class="ob")
+                  h4 Надежно защитим права и интересы
+                  p Заказав комплексные юридические услуги в ООО «МК-Правовые технологии», можно больше не платить зарплату штатному юристу, страховые отчисления и налоги с его доходов. Можно не оплачивать отпуск, больничные и не беспокоиться о нахождении работника на рабочем месте в нужный момент.
+                div(class="GRprava-gyt")
+              div(class="GRresult")
 
 
          
