--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -353,9 +353,16 @@ html(lang="en")
                 div(class="ob")
                   h4 Надежно защитим права и интересы
                   p Заказав комплексные юридические услуги в ООО «МК-Правовые технологии», можно больше не платить зарплату штатному юристу, страховые отчисления и налоги с его доходов. Можно не оплачивать отпуск, больничные и не беспокоиться о нахождении работника на рабочем месте в нужный момент.
-                div(class="GRprava-gyt")
-              div(class="GRresult")
+                div(class="GRprava-gyt")  
 
+            div(class="GRresult")
+              div(class="re")
+                h4 Вы платите только за результат!
+              div(class="prakt")
+                p В своей практике, мы дотошно соблюдаем законность, учитываем сложившуюся правовую практику и правила юридической этики. Мы считаем, что в поддержке бизнеса важно учитывать конкретные проблемы клиента и строить сотрудничество по принципу тщательного изучения всех нюансов возникшей ситуации. Всегда честны и объективны.
+
+        div(class="imgKart")
+          img(src="images/Rectangle 114.png", alt="картинка")
 
          
 
