--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -364,7 +364,56 @@ html(lang="en")
         div(class="imgKart")
           img(src="images/Rectangle 114.png", alt="картинка")
 
-         
+        section(class="servis")
+          .container
+            div(class="scroll")
+              h2 Перечень оказываемых услуг
+          .container    
+            div(class="DWQ")
+              .row
+                .col-5    
+                  div(class="SErvscrol")
+                    div(class="corol")
+                    p(class="regi") Регистрации ИП и юрлиц
+                    a(href="#") ПОДРОБНЕЕ
+                .col-7
+                  div(class="SErvscroll")
+                    div(class="coroll")
+            div(class="DWD")
+              .row
+                .col-6    
+                  div(class="SErvscr")
+                    div(class="corol2")
+                .col-6
+                  div(class="SErvscr")
+                    div(class="coroll2")        
+
+            div(class="DWW")
+              .row
+                .col-7    
+                  div(class="SErvscrt")
+                    div(class="corol21")
+                .col-5
+                  div(class="SErvscry")
+                    div(class="coroll21")     
+
+            div(class="DWC")
+              .row
+                .col-6    
+                  div(class="SErvscr")
+                    div(class="corol2")
+                .col-6
+                  div(class="SErvscr")
+                    div(class="coroll2")   
+
+            div(class="DWt")
+              .row
+                .col-5    
+                  div(class="SErvscrol")
+                    div(class="corol")
+                .col-7
+                  div(class="SErvscroll")
+                    div(class="coroll")                
 
 
 
