--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -436,11 +436,6 @@ button
 .detu-wrap
   padding-bottom: 60px
 
-  .col-4 
-    padding: 0 !important
-  .col-8
-    padding: 0 !important
-
 .zx
   left: -125px !important
 
@@ -630,10 +625,130 @@ button
 .ob
   padding: 40px 50px 55px 50px
 
+.imgKart
+  margin-bottom: 60px
+
+.scroll
+  font-family: 'Commissioner' , sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 28px
+  line-height: 40px
+  letter-spacing: 0.03em
+  color: rgba(0, 0, 0, 0.9)
+
+.SErvscrol
+  background: #FFFFFF
+  position: relative
+  width: 470px
+  height: 140px
+
+  .regi
+    padding: 20px 30px 45px 100px
+
+  a 
+    padding-left: 362px  
+
+.SErvscroll
+  width: 670px
+  height: 140px  
+  background: #FFFFFF
+  position: relative
+
+.corol
+  width: 70px
+  height: 140px
+  position: absolute
+  top: 0
+  left: 0
+  background: rgba(222, 195, 119, 0.4)
+
+.coroll
+  width: 70px
+  height: 140px
+  position: absolute
+  top: 0
+  left: 0
+  background: rgba(222, 195, 119, 0.4)  
+
+.DWQ
+  padding-bottom: 30px 
+
+.SErvscr  
+  width: 570px
+  height: 140px  
+  background: #FFFFFF
+  position: relative
+
+.DWD
+  padding-bottom: 30px 
+
+.corol2
+  width: 70px
+  height: 140px
+  position: absolute
+  top: 0
+  left: 0
+  background: rgba(222, 195, 119, 0.75)
+
+.coroll2
+  width: 70px
+  height: 140px
+  position: absolute
+  top: 0
+  left: 0
+  background: rgba(222, 195, 119, 0.75) 
+
+.SErvscrt
+  background: #FFFFFF
+  position: relative
+  width: 670px
+  height: 140px
+
+.SErvscry
+  width: 470px
+  height: 140px  
+  background: #FFFFFF
+  position: relative
+
+.corol21
+  width: 70px
+  height: 140px
+  position: absolute
+  top: 0
+  left: 0
+  background: #DEC377
+
+.coroll21
+  width: 70px
+  height: 140px
+  position: absolute
+  top: 0
+  left: 0
+  background: #DEC377  
+
+.DWW
+  padding-bottom: 30px
+
+.DWC
+  padding-bottom: 30px
+
+.DWt
+  padding-bottom: 50px
+ 
+
+
+
+
+
+
 .container
   max-width: 1170px !important
   margin: 0 auto  
   
+
+
+
 
 
 
