--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -371,49 +371,112 @@ html(lang="en")
           .container    
             div(class="DWQ")
               .row
-                .col-5    
+                .col-md-5    
                   div(class="SErvscrol")
                     div(class="corol")
                     p(class="regi") Регистрации ИП и юрлиц
-                    a(href="#") ПОДРОБНЕЕ
-                .col-7
+                    a(class="regin" href="#") ПОДРОБНЕЕ
+                .col-md-7
                   div(class="SErvscroll")
                     div(class="coroll")
+                    p(class="regi") Ликвидация, реорганизация и продажа бизнеса
+                    a(class="reginn" href="#") ПОДРОБНЕЕ
             div(class="DWD")
               .row
-                .col-6    
+                .col-md-6    
                   div(class="SErvscr")
                     div(class="corol2")
-                .col-6
+                    p(class="regi") Взыскание дебиторской задолженности
+                    a(class="reginy" href="#") ПОДРОБНЕЕ
+                .col-md-6
                   div(class="SErvscr")
-                    div(class="coroll2")        
+                    div(class="coroll2")   
+                    p(class="regi") Письменные и устные консультации
+                    a(class="reginy" href="#") ПОДРОБНЕЕ     
 
             div(class="DWW")
               .row
-                .col-7    
+                .col-md-7    
                   div(class="SErvscrt")
                     div(class="corol21")
-                .col-5
+                    p(class="regii") Разработка уставных документов и внесение <br> изменений в них
+                    a(class="regin15" href="#") ПОДРОБНЕЕ
+                .col-md-5
                   div(class="SErvscry")
-                    div(class="coroll21")     
+                    div(class="coroll21")   
+                    p(class="regi") Ведение переговоров
+                    a(class="regin362" href="#") ПОДРОБНЕЕ  
 
             div(class="DWC")
               .row
-                .col-6    
+                .col-md-6    
                   div(class="SErvscr")
                     div(class="corol2")
-                .col-6
+                    p(class="regi") Комплексное сопровождение бизнеса
+                    a(class="reginy" href="#") ПОДРОБНЕЕ
+                .col-md-6
                   div(class="SErvscr")
                     div(class="coroll2")   
+                    p(class="regi") Сопровождение деловых сделок
+                    a(class="reginy" href="#") ПОДРОБНЕЕ
 
             div(class="DWt")
               .row
-                .col-5    
+                .col-md-5    
                   div(class="SErvscrol")
                     div(class="corol")
-                .col-7
+                    p(class="regi") Лицензирование бизнеса
+                    a(class="regin362" href="#") ПОДРОБНЕЕ
+                .col-md-7
                   div(class="SErvscroll")
-                    div(class="coroll")                
+                    div(class="coroll") 
+                    p(class="regi") Решение правовых споров
+                    a(class="reginn" href="#") ПОДРОБНЕЕ        
+
+            div(class="Yr")   
+              div(class="Yr-wrap")   
+                p Оказание юридических услуг юридическим лицам и индивидуальным предпринимателям – наша работа. Среди собственников бизнеса принято считать, что прочитать закон в Интернете и применить его на практике - это одно и тоже. Основываясь на этом убеждении, они часто отказываются от профессиональной помощи. Практика же показывает, что только опытный юрист может правильно разобраться в правовых тонкостях, своевременно предотвратить ложные шаги и ускорить получение результата.
+              div(class="Yr-but")     
+                button ВСЕ УСЛУГИ 
+
+      section(class="DAV")
+        .container
+          .row
+            .col-md-5
+              h2 Почему нам доверяют
+              p Прозрачность и открытость для клиентов – наш принцип, который с самого начала исключает любые недопонимания. Мы тщательно продумали работу каждого юриста внутри коллектива, что обеспечивает высокое качество юридических услуг компании.
+            .offset-md-1 
+            .col-md-5
+              div(class="brok")
+                div(class="brokkrug")
+                  div(class="brokt")
+                div(class="tert")
+                  p(class="tertwap") безупречная репутация
+
+              div(class="brok")
+                div(class="brokkrug")
+                  div(class="brokt")
+                div(class="tert")
+                  p(class="tertwap") абсолютная конфиденциальность 
+
+              div(class="brok")
+                div(class="brokkrug")
+                  div(class="brokt")
+                div(class="tert")
+                  p(class="tertwap") внимание к каждому клиенту
+
+              div(class="brok")
+                div(class="brokkrug")
+                  div(class="brokt")
+                div(class="tert")
+                  p(class="tertwap") успешный опыт решения нестандартных вопросов     
+
+        hr   
+                  
+
+                
+
+
 
 
 
