--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -643,11 +643,80 @@ button
   width: 470px
   height: 140px
 
-  .regi
-    padding: 20px 30px 45px 100px
+.regi
+  padding: 20px 30px 45px 100px
+  font-family: 'Commissioner' , sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 20px
+  line-height: 30px
+  color: rgba(0, 0, 0, 0.9)
+  margin: 0
 
-  a 
-    padding-left: 362px  
+.regin
+  padding-left: 362px
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 600
+  font-size: 12px
+  line-height: 20px
+  letter-spacing: 0.02em
+  text-transform: uppercase
+  color: rgba(0, 0, 0, 0.5)
+
+.reginn
+  padding-left: 562px
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 600
+  font-size: 12px
+  line-height: 20px
+  letter-spacing: 0.02em
+  text-transform: uppercase
+  color: rgba(0, 0, 0, 0.5)
+
+.reginy
+  padding-left: 462px
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 600
+  font-size: 12px
+  line-height: 20px
+  letter-spacing: 0.02em
+  text-transform: uppercase
+  color: rgba(0, 0, 0, 0.5) 
+
+.regin15
+  padding-left: 562px
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 600
+  font-size: 12px
+  line-height: 20px
+  letter-spacing: 0.02em
+  text-transform: uppercase
+  color: rgba(0, 0, 0, 0.5) 
+
+.regii
+  padding: 20px 30px 15px 100px
+  font-family: 'Commissioner' , sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 20px
+  line-height: 30px
+  color: rgba(0, 0, 0, 0.9)
+  margin: 0 
+
+.regin362
+  padding-left: 362px
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 600
+  font-size: 12px
+  line-height: 20px
+  letter-spacing: 0.02em
+  text-transform: uppercase
+  color: rgba(0, 0, 0, 0.5) 
 
 .SErvscroll
   width: 670px
@@ -737,9 +806,73 @@ button
   padding-bottom: 50px
  
 
+.Yr
+  display: flex
+  justify-content: space-between 
 
+.Yr-wrap
+  p 
+    width: 770px
+    height: 125px
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: 300
+    font-size: 15px
+    line-height: 25px
+    color: rgba(0, 0, 0, 0.8)
 
+.DAV
+  background: #FFFFFF
+  padding-top: 64px
+  padding-bottom: 105px
 
+.brok
+  color: #DEC377
+  display: flex
+  width: 440px
+  height: 30px
+  justify-content: space-between
+  margin-bottom: 35px
+
+.brokkrug
+  position: relative
+  width: 40px
+  height: 40px
+  left: 0px
+  top: 0px
+  border: 1px solid rgba(222, 195, 119, 0.4)
+  box-sizing: border-box
+  border-radius: 50%
+ 
+.brokt
+  position: absolute
+  width: 10px
+  height: 10px
+  left: 50%
+  top: 50%
+  transform: translate(-50%, -50%)
+  background: #DEC377
+  border-radius: 50%
+
+.tert
+  width: 360px
+  height: 30px
+  margin-top: 6px
+
+.tertwap
+  margin: 0  
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 600
+  font-size: 17px
+  line-height: 30px
+  letter-spacing: 0.01em
+  color: rgba(0, 0, 0, 0.75)
+
+hr 
+  width: 1170px
+  margin-top: 59px !important
+  margin-bottom: 60px !important
 
 
 .container
