--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -472,7 +472,37 @@ html(lang="en")
                   p(class="tertwap") успешный опыт решения нестандартных вопросов     
 
         hr   
-                  
+
+        .container
+          .row
+            .col-md-5
+              h2 Почему нам доверяют
+              p Прозрачность и открытость для клиентов – наш принцип, который с самого начала исключает любые недопонимания. Мы тщательно продумали работу каждого юриста внутри коллектива, что обеспечивает высокое качество юридических услуг компании.
+            .offset-md-1 
+            .col-md-5
+              div(class="brok")
+                div(class="brokkrug")
+                  div(class="brokt")
+                div(class="tert")
+                  p(class="tertwap") безупречная репутация
+
+              div(class="brok")
+                div(class="brokkrug")
+                  div(class="brokt")
+                div(class="tert")
+                  p(class="tertwap") абсолютная конфиденциальность 
+
+              div(class="brok")
+                div(class="brokkrug")
+                  div(class="brokt")
+                div(class="tert")
+                  p(class="tertwap") внимание к каждому клиенту
+
+              div(class="brok")
+                div(class="brokkrug")
+                  div(class="brokt")
+                div(class="tert")
+                  p(class="tertwap") успешный опыт решения нестандартных вопросов              
 
                 
 
