--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -476,35 +476,72 @@ html(lang="en")
         .container
           .row
             .col-md-5
-              h2 Почему нам доверяют
-              p Прозрачность и открытость для клиентов – наш принцип, который с самого начала исключает любые недопонимания. Мы тщательно продумали работу каждого юриста внутри коллектива, что обеспечивает высокое качество юридических услуг компании.
+              h2 Что получает клиент
+              p Юристы нашей компании готовы дать четкие, основанные на фактах, консультации, касающиеся и «типовой», и нестандартной ситуации, опираясь на сложившуюся служебную практику и многолетний опыт. Мы объективно оцениваем риски и тщательно анализируем каждый случай.
             .offset-md-1 
             .col-md-5
               div(class="brok")
                 div(class="brokkrug")
                   div(class="brokt")
                 div(class="tert")
-                  p(class="tertwap") безупречная репутация
+                  p(class="tertwap") надежная защита бизнеса
 
               div(class="brok")
                 div(class="brokkrug")
                   div(class="brokt")
                 div(class="tert")
-                  p(class="tertwap") абсолютная конфиденциальность 
+                  p(class="tertwap") актуальная правовая помощь
 
               div(class="brok")
                 div(class="brokkrug")
                   div(class="brokt")
                 div(class="tert")
-                  p(class="tertwap") внимание к каждому клиенту
+                  p(class="tertwap") своевременная оценка рисков
 
               div(class="brok")
                 div(class="brokkrug")
                   div(class="brokt")
                 div(class="tert")
-                  p(class="tertwap") успешный опыт решения нестандартных вопросов              
+                  p(class="tertwap") компетентное решение правовых вопросов             
 
-                
+      section(class="advantage")  
+        .container
+          h2(class="advan") Наши преимущества   
+          div(class="advant")
+            div(class="advant-aadvant1")
+              div(class="advant-ol")
+                div(class="advant-img")
+                  img(src="images/Group11.svg", alt="иконка")
+              div(class="advant-wrap")
+                p Лицензия на оказание юридических услуг
+
+            div(class="advant-aadvant1")
+              div(class="advant-ol")
+                div(class="advant-img")
+                  img(src="images/ikon 12.svg", alt="иконка")
+              div(class="advant-wrap")
+                p Опытные сотрудники
+
+            div(class="advant-aadvant1")
+              div(class="advant-ol")
+                div(class="advant-img")
+                  img(src="images/ikon 13.svg", alt="иконка")
+              div(class="advant-wrap")
+                p Коммуникативные навыки – без труда открываем любые двери и быстро решаем нужные вопросы
+
+            div(class="advant-aadvant1")
+              div(class="advant-ol")
+                div(class="advant-img")
+                  img(src="images/Group14.svg", alt="иконка")
+              div(class="advant-wrap")
+                p Скрупулезный поход к ведению документации
+
+          div(class="Yrist")
+            div(class="Yr1")
+            div(class="Yr12")
+              p Юристы нашей компании готовы дать четкие, основанные на фактах, консультации, касающиеся и «типовой», и нестандартной ситуации, опираясь на сложившуюся служебную практику и многолетний опыт. Мы объективно оцениваем риски и тщательно анализируем каждый случай.
+            
+ 
 
 
 
