--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -540,7 +540,40 @@ html(lang="en")
             div(class="Yr1")
             div(class="Yr12")
               p Юристы нашей компании готовы дать четкие, основанные на фактах, консультации, касающиеся и «типовой», и нестандартной ситуации, опираясь на сложившуюся служебную практику и многолетний опыт. Мы объективно оцениваем риски и тщательно анализируем каждый случай.
-            
+
+          div(class="organization")  
+            div(class="cooperate")
+              h2 Организация сотрудничества
+              div(class="cooperater")  
+                div(class="coop")
+                  div(class="coop1")
+                    p 1
+                div(class="coop-wrap")  
+                  p Установив контакт с нашим сотрудником, Вы оговорите нюансы предмета обсуждения и согласуете личную встречу.
+              div(class="cooperatere") 
+                div(class="coop")
+                  div(class="coop1")
+                    p 2
+                div(class="coop-wrap")  
+                  p Юрист изучит документы, необходимые для разработки стратегии решения возникшей ситуации. И заключит договор.
+              div(class="dok")     
+                 p Также в нашей компании возможна удаленная форма обслуживания с оказанием полного комплекса юридических услуг в РБ через современные средства связи и мессенджеры.      
+           
+            div(class="frame")  
+              form
+                div(class="formik")
+                  .form-group
+                    label(for='mary') Ваше имя
+                    input#mary.form-control(type='email' aria-describedby='emailHelp' placeholder='Ваше имя')
+                  .form-group
+                    label(for='exampleInputPassword1') Телефон для связи
+                    input#exampleInputPassword1.form-control(type='password' placeholder='+375 (XX) XXX-XX-XX')
+                  .form-group
+                    p(class="But") Нажимая на кнопку «Получить консультацию», вы соглашаетесь с условиями
+                    a(class="Bss" href="#") Политики конфиденциальности
+                  button.kons.btn.btn-primary(type='submit') ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
+
+
  
 
 
