--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -964,6 +964,110 @@ hr
     color: rgba(0, 0, 0, 0.8)
 
 
+.organization
+  display: flex
+  justify-content: space-between
+
+.cooperate
+  width: 500px
+  height: 365px
+  h2 
+    padding-bottom: 35px
+
+.cooperater
+  display: flex
+  justify-content: space-between
+  padding-bottom: 14px
+
+.cooperatere  
+  display: flex
+  justify-content: space-between
+
+.coop
+  border-radius: 50%
+  border: 1px solid rgba(222, 195, 119, 0.75)
+  position: relative 
+  width: 70px
+  height: 70px
+  margin-right: 30px
+
+.coop1
+  position: absolute  
+  top: 50%
+  left: 50%
+  transform: translate(-50%, -50%)
+  font-family: 'Commissioner' , sans-serif
+  font-style: normal
+  font-weight: 800
+  font-size: 22px
+  line-height: 67px
+  color: #DEC377
+  p
+    margin: 0
+
+.coop-wrap
+  width: 400px 
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 600
+  font-size: 15px
+  line-height: 25px
+  display: flex
+  align-items: center
+  color: rgba(0, 0, 0, 0.8)   
+
+.dok
+  padding-top: 19px
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 300
+  font-size: 14px
+  line-height: 25px
+  letter-spacing: 0.01em
+  color: rgba(0, 0, 0, 0.8)  
+
+form
+  width: 570px
+  height: 365px
+  background: #FFFFFF
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05)
+  border-radius: 3px
+
+
+input
+  border-top: 0 !important
+  border-left: 0 !important
+  border-right: 0 !important
+
+.formik 
+  padding: 50px 40px !important
+
+.But
+  margin: 0  
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 300
+  font-size: 13px
+  line-height: 20px
+  color: rgba(0, 0, 0, 0.5)
+ 
+.Bss
+  font-family: 'Lato' , sans-serif
+  font-weight: 430
+  font-size: 13px
+  line-height: 20px
+  color: rgba(0, 0, 0, 2.5) !important
+
+.kons
+  width: 470px !important
+
+.btn-primary
+  border-radius: 2px !important
+  background: #DEC377 !important
+  border-color: #DEC377 !important
+
+
+
 .container
   max-width: 1170px !important
   margin: 0 auto  
