--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -573,8 +573,102 @@ html(lang="en")
                     a(class="Bss" href="#") Политики конфиденциальности
                   button.kons.btn.btn-primary(type='submit') ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
 
+          .row
+            .col-md-6
+              h2(class="stim") Стоимость юридических услуг в Минске
 
+          .row
+            .col-md-7
+              p(class="stims") Стоимость услуг формируется согласно тарифам, установленным в компании и в зависимости от времени, затраченного юристом на разрешение возникшей ситуации. Принцип прозрачности делает наши цены обоснованными и понятными для клиента.
+          button(class="sti") ТАРИФЫ
+      hr(class="stik")
  
+
+    footer
+      .container
+        div(class="texno")
+          div(class="texno1")
+            h5 ООО “МК-ПРАВОВЫЕ ТЕХНОЛОГИИ”
+          div(class="texno2")
+            p НАШИ ОФИСЫ
+          div(class="texno3")
+            p ВРЕМЯ РАБОТЫ
+
+        div(class="all")  
+          div(class="all1")
+            div(class="YNP")
+              div(class="YN")
+                h1 УНП 
+              div(class="Y")  
+                span 192710862
+            div(class="rey")    
+              div(class="YN")
+                h1 Наш рейтинг
+              div(class="Y") 
+                span 5 из 5 (15 отзывов)
+            div(class="iws")
+              div(class="iws1")
+                img(src="images/vk.svg", alt="vk")
+              div(class="iws2")
+                img(src="images/odnoklassniki.svg", alt="vk")
+              div(class="iws3")
+                img(src="images/linkedin.svg", alt="vk")
+              div(class="iws4")
+                img(src="images/instagram.svg", alt="vk")
+              div(class="iws5")
+                img(src="images/youtube.svg", alt="vk")
+              div(class="iws6")
+                img(src="images/facebook.svg", alt="vk")
+            div(class="karta")    
+              div(class="kar")
+                h1 КАРТА САЙТА
+              div(class="str") 
+                img(src="images/стрелка.svg", alt="стрелка")
+            div(class="karta") 
+              div(class="kar")
+                h1 ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ
+              div(class="str") 
+                img(src="images/стрелка.svg", alt="стрелка")  
+          div(class="all2")  
+            h1(class="tes") КОНТАКТЫ В МИНСКЕ 
+            p +375 (44) 755-01-01
+            p +375 (29) 550-01-01
+            p +375 (17) 374-40-60 
+            h1(class="ard") Адрес
+            p г. Минск, ул. Широкая, д. 3,<br> пом. 146, оф. 4
+            h1(class="ard") Телефон для связи резидентов <br> Российской Федерации
+            p whatsapp +7 (989) 166 24 00
+            h1(class="ard") info@jurisprudent.by
+
+
+          div(class="all3")  
+            span(class="tes") ОТДЕЛ В МОГИЛЕВЕ
+            h1(class="ard") Адрес
+            p г. Могилев, ул. Космонавтов, <br> д. 19, оф. 507
+            h1(class="ardr") mogilev@jurisprudent.by
+
+            span(class="tes") ОТДЕЛ В МОГИЛЕВЕ
+            h1(class="ard") Адрес
+            p г. Могилев, ул. Космонавтов, <br> д. 19, оф. 507
+            h1(class="ardr") mogilev@jurisprudent.by
+
+            span(class="tes") ОТДЕЛ В МОГИЛЕВЕ
+            h1(class="ard") Адрес
+            p г. Могилев, ул. Космонавтов, <br> д. 19, оф. 507
+            h1(class="ardr") mogilev@jurisprudent.by
+
+          div(class="all4")  
+            span(class="tes") ОТДЕЛ В ГРОДНО
+            h1(class="ard") Адрес
+            p г. Гродно, ул. Карла Маркса, <br>д. 31-1, оф. 1010
+            h1(class="ardr") grodno@jurisprudent.by
+
+            span(class="tes") ОТДЕЛ В МОГИЛЕВЕ
+            h1(class="ard") Адрес
+            p г. Могилев, ул. Космонавтов, <br> д. 19, оф. 507
+            h1(class="ardr") mogilev@jurisprudent.by
+          div(class="all5")  
+            span(class="tess") Прием посетителей
 
 
 
