--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -19,6 +19,12 @@ header
 .nav-link1
   display: inline !important
   padding: 5px
+  font-family: 'Source Sans Pro' , sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 16px
+  line-height: 20px
+  color: rgba(0, 0, 0, 0.8)
 
 .namber
   span
@@ -99,7 +105,7 @@ button
   color: #FFFFFF
   cursor: pointer
   background: #DEC377
-  border-radius: 2px
+  border-radius: 2px !important
   margin: 0 auto
   border: none
 
@@ -1066,7 +1072,173 @@ input
   background: #DEC377 !important
   border-color: #DEC377 !important
 
+.stim
+  font-family: 'Commissioner' , sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 28px
+  line-height: 40px
+  letter-spacing: 0.03em
+  color: rgba(0, 0, 0, 0.9)
+  padding-top: 90px
+  padding-bottom: 14px
 
+.stims
+  padding-bottom: 14px
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 300
+  font-size: 15px
+  line-height: 25px
+  color: rgba(0, 0, 0, 0.8)
+
+.sti
+  margin-bottom: 100px
+
+.stik
+  width: 1920px
+  margin-top: 0 !important
+  margin-bottom: 49px  !important
+
+.texno
+  display: flex
+  justify-content: space-between
+  margin-bottom: 29px
+
+.texno1
+  width: 270px
+  height: 60px
+
+.texno2
+  p
+    margin: 0
+    padding-top: 35px
+  width: 640px
+  height: 60px
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1)
+  
+.texno3
+  width: 170px  
+  height: 60px
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1)
+
+  p
+    margin: 0
+    padding-top: 35px
+
+.all
+  display: flex
+  justify-content: space-between
+
+.all1
+  margin-top: 45px  
+
+.YNP
+  display: flex
+  justify-content: space-between
+  width: 68px
+  height: 20px
+  margin-bottom: 10px
+
+.YN
+  h1
+    font-family: 'Commissioner' , sans-serif
+    font-style: normal
+    font-weight: 500
+    font-size: 13px
+    line-height: 20px
+    letter-spacing: 0.01em
+    color: rgba(0, 0, 0, 0.5)
+    padding-right: 15px
+
+.Y
+  font-family: 'Lato' , sans-serif
+  font-style: normal
+  font-weight: 300
+  font-size: 13px
+  line-height: 20px
+  color: rgba(0, 0, 0, 0.5)
+
+.rey
+  display: flex
+  justify-content: space-between    
+  width: 207px
+  margin-bottom: 52px
+
+
+.iws
+  display: flex
+  justify-content: space-between  
+  padding-bottom: 50px
+
+.karta
+  display: flex
+  justify-content: space-between  
+  width: 160px
+  padding-bottom: 22px
+
+.tes  
+  font-family: 'Commissioner' , sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 14px
+  line-height: 25px
+  letter-spacing: 0.04em
+  text-transform: uppercase
+  color: rgba(0, 0, 0, 0.75) 
+  margin-bottom: 20px
+.tess
+  font-family: 'Commissioner' , sans-serif
+  font-weight: 500
+  font-size: 13px
+  line-height: 20px
+  letter-spacing: 0.01em
+  color: rgba(0, 0, 0, 0.75)  
+
+.kar
+  h1
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: 600
+    font-size: 12px
+    line-height: 20px
+    letter-spacing: 0.02em
+    text-transform: uppercase
+  margin-right: 15px
+
+.ard
+  font-family: 'Commissioner' , sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 13px
+  line-height: 20px
+  letter-spacing: 0.01em
+  color: rgba(0, 0, 0, 0.75)
+  padding-top: 20px
+
+.all2
+  p
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: 300
+    font-size: 13px
+    line-height: 20px
+    color: rgba(0, 0, 0, 0.8)
+    margin-bottom: 0
+
+.ardr
+  padding-top: 5px
+  font-family: 'Lato'  , sans-serif
+  font-style: normal
+  font-weight: normal
+  font-size: 13px
+  line-height: 20px
+  color: rgba(0, 0, 0, 0.8)
+  padding-bottom: 20px
+
+.all3
+  p
+    margin: 0
 
 .container
   max-width: 1170px !important
