--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -585,7 +585,7 @@ html(lang="en")
  
 
     footer
-      .container
+      .container(class="marg")
         div(class="texno")
           div(class="texno1")
             h5 ООО “МК-ПРАВОВЫЕ ТЕХНОЛОГИИ”
@@ -643,32 +643,40 @@ html(lang="en")
 
           div(class="all3")  
             span(class="tes") ОТДЕЛ В МОГИЛЕВЕ
-            h1(class="ard") Адрес
+            h1(class="ardd") Адрес
             p г. Могилев, ул. Космонавтов, <br> д. 19, оф. 507
             h1(class="ardr") mogilev@jurisprudent.by
 
-            span(class="tes") ОТДЕЛ В МОГИЛЕВЕ
-            h1(class="ard") Адрес
-            p г. Могилев, ул. Космонавтов, <br> д. 19, оф. 507
-            h1(class="ardr") mogilev@jurisprudent.by
+            span(class="tes") ОТДЕЛ В БРЕСТЕ
+            h1(class="ardd") Адрес
+            p г. Брест, б-р Шевченко, д. 4, <br>оф. 401
+            h1(class="ardr") brest@jurisprudent.by
 
-            span(class="tes") ОТДЕЛ В МОГИЛЕВЕ
-            h1(class="ard") Адрес
-            p г. Могилев, ул. Космонавтов, <br> д. 19, оф. 507
-            h1(class="ardr") mogilev@jurisprudent.by
+            span(class="tes") ОТДЕЛ В ВИТЕБСКЕ
+            h1(class="ardd") Адрес
+            p г. Витебск, ул.Гоголя, д. 14, <br>оф. 614
+            h1(class="ardr") vitebsk@jurisprudent.by
 
           div(class="all4")  
             span(class="tes") ОТДЕЛ В ГРОДНО
-            h1(class="ard") Адрес
+            h1(class="ardd") Адрес
             p г. Гродно, ул. Карла Маркса, <br>д. 31-1, оф. 1010
             h1(class="ardr") grodno@jurisprudent.by
 
-            span(class="tes") ОТДЕЛ В МОГИЛЕВЕ
-            h1(class="ard") Адрес
-            p г. Могилев, ул. Космонавтов, <br> д. 19, оф. 507
-            h1(class="ardr") mogilev@jurisprudent.by
+            span(class="tes") ОТДЕЛ В ГОМЕЛЕ
+            h1(class="ardd") Адрес
+            p г. Гомель, пр. Ленина, д. 10, <br>оф. 901
+            h1(class="ardr") gomel@jurisprudent.by
           div(class="all5")  
             span(class="tess") Прием посетителей
+            p Ежедневно с 8.00 до 19.00 Выходной: суббота - воскресенье.
+            span(class="tess") Прием звонков
+            p Ежедневно с 8.00 до 22.00 Без выходных
+            span(class="tess") Онлайн консультант
+            p Круглосуточно 24/7 Без выходных
+
+      div(class="foot")
+        p Разработка и продвижение сайта - Digital агентство «Веб Фокус»
 
 
 
