--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1209,7 +1209,7 @@ input
 .ard
   font-family: 'Commissioner' , sans-serif
   font-style: normal
-  font-weight: normal
+  font-weight: 500
   font-size: 13px
   line-height: 20px
   letter-spacing: 0.01em
@@ -1234,11 +1234,54 @@ input
   font-size: 13px
   line-height: 20px
   color: rgba(0, 0, 0, 0.8)
-  padding-bottom: 20px
+  padding-bottom: 25px
 
 .all3
   p
     margin: 0
+
+.ardd
+  font-family: 'Commissioner' , sans-serif
+  font-style: normal
+  font-weight: 500
+  font-size: 13px
+  line-height: 20px
+  letter-spacing: 0.01em
+  color: rgba(0, 0, 0, 0.75)
+  padding-top: 10px
+
+.all4
+  p
+    margin: 0
+
+.all5
+  width: 170px
+  p
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: 300
+    font-size: 13px
+    line-height: 20px
+    color: rgba(0, 0, 0, 0.8)
+    padding-top: 5px
+    padding-bottom: 14px
+
+.marg
+  margin-bottom: 27px !important
+
+.foot
+  height: 55px
+  background: rgba(0, 0, 0, 0.1)
+  padding-top: 18px
+  p
+    font-family: 'Lato' , sans-serif
+    font-style: normal
+    font-weight: 300
+    font-size: 12px
+    line-height: 20px
+    letter-spacing: 0.02em
+    color: rgba(0, 0, 0, 0.8)
+    text-align: center
 
 .container
   max-width: 1170px !important
